--- a/clmath-viewer/MainWindow.xaml
+++ b/clmath-viewer/MainWindow.xaml
@@ -6,5 +6,5 @@
         xmlns:ogl="clr-namespace:SharpGL.WPF;assembly=SharpGL.WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <ogl:OpenGLControl OpenGLInitialized="Initialize" OpenGLDraw="Draw" DrawFPS="True" MouseMove="MouseHandler" MouseDown="ClickHandler" />
+    <ogl:OpenGLControl OpenGLInitialized="Initialize" OpenGLDraw="Draw" DrawFPS="True" KeyDown="KeyDownHandler" MouseMove="MouseHandler" MouseDown="ClickHandler" />
 </Window>
